* Fix z-index of focus indication for buttons inside Heading

--- a/src/view/Components/Heading/style.scss
+++ b/src/view/Components/Heading/style.scss
@@ -21,6 +21,7 @@
   justify-content: flex-end;
   flex: 1 1 auto;
   column-gap: 18px;
+  z-index: 1001;
 }
 
 .header .heading-actions {
